--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "with-perms",
   "version": "1.0.0",
   "description": "A higher order component for adding permissions to React components.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "files": [
+    "dist/index.js",
     "src/index.js",
     "README.md"
   ],
